@@ -27,12 +27,12 @@
 /// specified location.  If that fails it creates one from current data.
 ibis::relic::relic(const ibis::column* c, const char* f)
     : ibis::index(c) {
-    if (c == 0) return;  // nothing can be done
-
     try {
-	if (f) {
-	    read(f);
+	if (f && 0 == read(f)) {
+	    return;
 	}
+
+        if (c == 0) return;  // nothing can be done
 	if (vals.empty() && c->partition()->nRows() > 0 &&
 	    c->type() != ibis::CATEGORY &&
 	    c->type() != ibis::TEXT) {
